--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,13 @@
   50% { transform: translateY(46px); }
 }
 /* End of Uiverse.io code */
+
+/*Error Page */
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+.animate-fadeIn {
+  animation: fadeIn 1s ease-in-out;
+}
